# gpt2

./: .gitignore  README.md  learnings.md  pyproject.toml  requirements.txt  setup.py  todos.md  train.py  validate.py
benchmarking/: readme.md  tokeniser_batch_encode.py
configs/: gpt1.yaml  gpt2.yaml
docs/: REPO_STRUCTURE.md  blog.md  good_questions.md  learnings.md  plan.md  todos.md
gpt/modules/data/: dataset.py  utils.py
gpt/modules/embedding/: rope.py  sinusoidal.py
gpt/modules/layers/: attention.py  transformer_block.py
gpt/modules/models/: gpt2.py
gpt/modules/norm/: layernorm.py
gpt/modules/optimizer/: lr_finder.py
gpt/modules/utils/: logger.py
gpt/schema/: models.py
notebooks/: dataset_dataloader.ipynb
tests/embedding/: rope.py  sinusoidal.py
