[project]
name = "gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.7.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# torchvision = [
#   { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]